2015-01-14  Richard Biener  <rguenther@suse.de>

PR tree-optimization/59354
	* tree-vect-slp.c (vect_build_slp_tree_1): Treat loads from
	groups larger than the slp group size as having gaps.

	* gcc.dg/vect/pr59354.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@219603 138bc75d-0d04-0410-961f-82ee72b054a4